<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp">

    <Button
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/button1"
            android:text="@string/signIn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group"
                                      app:layout_constraintTop_toTopOf="parent"
                                      app:layout_constraintStart_toStartOf="parent"
                                      app:layout_constraintEnd_toStartOf="parent"
                                      app:layout_constraintBottom_toTopOf="parent"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group2"
                                      app:layout_constraintTop_toTopOf="parent"
                                      app:layout_constraintStart_toStartOf="parent"
                                      app:layout_constraintEnd_toStartOf="parent"
                                      app:layout_constraintBottom_toTopOf="parent"/>
    <Button
            android:text="@string/create_account"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="125dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="44dp" android:layout_marginRight="44dp"/>
    <TextView
            android:text="@string/yourspace_2018"
            android:layout_width="119dp"
            android:layout_height="18dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="19dp"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/our_slogan"
            android:layout_width="284dp"
            android:layout_height="31dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:lineSpacingExtra="36sp"
            android:textColor="@android:color/black" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/welcome_to_yourspace"
            android:layout_width="284dp"
            android:layout_height="31dp"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:lineSpacingExtra="36sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>